[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Spawner.gd" type="Script" id=1]
[ext_resource path="res://assets/spawnertexture.png" type="Texture" id=2]
[ext_resource path="res://assets/player.png" type="Texture" id=3]
[ext_resource path="res://prefabs/material.tres" type="Material" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="Spawner" type="StaticBody2D" groups=[
"Object",
]]
material = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." groups=[
"Glow",
]]
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="RightPos" type="Area2D" parent="."]
position = Vector2( 64, 0 )

[node name="Colliision" type="CollisionShape2D" parent="RightPos"]
shape = SubResource( 1 )

[node name="LeftPos" type="Area2D" parent="."]
position = Vector2( -64, 0 )

[node name="Colliision" type="CollisionShape2D" parent="LeftPos"]
shape = SubResource( 1 )

[node name="UpPos" type="Area2D" parent="."]
position = Vector2( 0, -64 )

[node name="Colliision" type="CollisionShape2D" parent="UpPos"]
shape = SubResource( 1 )

[node name="DownPos" type="Area2D" parent="."]
position = Vector2( 0, 64 )

[node name="Colliision" type="CollisionShape2D" parent="DownPos"]
shape = SubResource( 1 )

[node name="SpawnLocation" type="Sprite" parent="."]
modulate = Color( 0.282353, 0.156863, 0.156863, 0.556863 )
position = Vector2( 64, 0 )
texture = ExtResource( 3 )

[node name="RIGHT" type="Position2D" parent="."]
position = Vector2( 64, 0 )

[node name="UP" type="Position2D" parent="."]
position = Vector2( 0, -64 )

[node name="LEFT" type="Position2D" parent="."]
position = Vector2( -64, 0 )

[node name="DOWN" type="Position2D" parent="."]
position = Vector2( 0, 64 )

[node name="SpawnerBlock" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="SpawnerBlock"]
shape = SubResource( 2 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="input_event" from="SpawnerBlock" to="." method="_on_SpawnerBlock_input_event"]
